# raytracing-iow

./: .gitignore  Cargo.toml  LICENSE  README.md  Shuttle.toml  rendering2.ppm
core/: Cargo.toml
core/src/: color.rs  lib.rs  ray.rs  utils.rs  world.rs
core/src/materials/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
core/src/render/: camera.rs  mod.rs  screen.rs  viewport.rs
core/src/shapes/: mod.rs  sphere.rs
core/src/vec3/: mod.rs
riow/: Cargo.toml
riow-fe/: package-lock.json  package.json  svelte.config.js  tailwind.config.ts
riow-fe/src/: app.html
riow-fe/src/lib/: GenerateForm.svelte  Material.svelte  Shape.svelte  Slider.svelte  Vec3.svelte  WorldObject.svelte  generateImage.ts  index.ts
riow-fe/src/routes/: +page.svelte
riow/src/: main.rs  renderer.rs
shuttle/: Cargo.toml  build.rs
shuttle/src/: config.rs  main.rs  models.rs  openapi.rs  render.rs  state.rs  utils.rs
shuttle/src/endpoints/: download.rs  gen.rs  mod.rs  status.rs
src/: color.rs  main.rs  pixel.rs  ray.rs  utils.rs  world.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/materials/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/render/: camera.rs  hit.rs  mod.rs  screen.rs  viewport.rs
src/shapes/: aabb.rs  cube.rs  mod.rs  sphere.rs
src/vec3/: math.rs  mod.rs  random.rs
