[package]
name = "riow-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
futures = "0.3.28"
image = "0.24.7"
serde = "1.0.188"
shuttle-axum = "0.29.0"
shuttle-runtime = "0.29.0"
tokio = "1.28.2"
tokio-util = { version = "0.7.9", features = ["io"] }
tracing = "0.1.37"
utoipa = { version = "4.0.0", features = ["uuid", "axum_extras"] }
uuid = { version = "1.4.1", features = ["serde"] }
raytracing-iow = { path = "../core/", features = ["serde", "utoipa"] }
anyhow = "1.0.75"
envconfig = "0.10.0"
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }
serde_json = "1.0.107"
chrono = { version = "0.4.31", features = ["serde"] }
tower-http = { version = "0.4.4", features = ["fs"] }
